discussion/kv_engine/130079/130079_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

local_docs api - needs a good clean

Change-Id: Iac756698f4613a6dc14a2e485ac9a63a414f369f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-06-08 20:04:47.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-08 20:30:28.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24466/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:3254:20:
error: use of undeclared identifier "couchstore_save_local_documents"; did you mean "couchstore_save_local_document"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24466/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28439/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(3254): error C3861: "couchstore_save_local_documents": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28439/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2641/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:3254:20: error: use of undeclared identifier "couchstore_save_local_documents"; did you mean "couchstore_save_local_document"? [clang-diagnostic-error]
    auto errCode = couchstore_save_local_documents(&db, localDocumentsPtrs);
                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                   couchstore_save_local_document
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:794:24: note: "couchstore_save_local_document" declared here
    couchstore_error_t couchstore_save_local_document(Db *db, LocalDoc *lDoc);
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:3254:57: error: no viable conversion from "std::vector<LocalDoc *>" (aka "vector<_local_doc *>") to "LocalDoc *" (aka "_local_doc *") [clang-diagnostic-error]
    auto errCode = couchstore_save_local_documents(&db, localDocumentsPtrs);
                                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:794:73: note: passing argument to parameter "lDoc" here
    couchstore_error_t couchstore_save_local_document(Db *db, LocalDoc *lDoc);
                                                                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2641/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:3254:20:
error: use of undeclared identifier "couchstore_save_local_documents"; did you mean "couchstore_save_local_document"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2641/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3114/ : FAILURE

Compile error at [2020-06-08T20:08:38.898Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:3254:20:
error: use of undeclared identifier "couchstore_save_local_documents"; did you mean "couchstore_save_local_document"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3114/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4049/ : FAILURE

Compile error at [2020-06-08T20:15:41.297Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:3254:20:
error: ?couchstore_save_local_documents? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4049/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4007/ : FAILURE

Compile error at [2020-06-08T20:06:44.895Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:3254:20:
error: ?couchstore_save_local_documents? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4007/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4134/ : FAILURE

Compile error at [2020-06-08T20:16:36.609Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:3254:20:
error: ?couchstore_save_local_documents? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4134/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11883/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1145/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-06-09 14:03:36.000000000
Message: 
Abandoned

uploaded with different change-id
----------------------------------------------------------------------------------------------------------------------
